[package]
name = "task"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
dirs = "4.0.0"
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.19"
anyhow = "1.0.51"
tempfile = "3.3.0"
colored = "2.0.0"
